2011-10-05  nineties <nineties48@gmail.com>

	* rowl1/rowl1-node.rlc : added to_builtin_sym() and make_expr_user().
	* rowl1/rowl1-numeric.rlc : fixed a bug.
	* rowl2/sample : added
	* lib/rowl/io.rlc, rowl1/rowl1-io.rlc : added several IO functions.
	* rowl1/rowl1-node.rlc :
	    - added new builtin object types InputFileStream and OutputFileStream.

2011-10-04  nineties <nineties48@gmail.com>

	* rowl1/rowl1-assembler.rlc :
	    - added put_operand_[byte/short/int].
	    - fixed name conflicts of put_sotrel and put_loadl.
	* rowl1/rowl1-compile.rlc :
	    - fixed a bug in allocation of local variables.
	* lib/rowl/io.rlc : added
	* rowl1/rowl1-matching.rlc : fixed a bug in same_head_pat().

2011-10-03  nineties <nineties48@gmail.com>

	* rowl1/rowl1-node.rlc : pretty_print_full()
	* rowl1/rowl1-assemble.rlc : print_bytecode()
	* lib/rowl/syntax.rlc : changed priorities of operators.
	    - 'else' 19->18
	    - ':'    18 -> 19
	* rowl1/rowl1-matching.rlc, librowl/syntax.rlc :
	    - changed to compile Quote{x} as SymbolP{x} in function parameters,
	      and eliminate the operator for SymbolP (originally its a "`").
	    - changed the operator for Quote from "!" to "`".
	* rowl1/rowl1-compile.rlc : added compilers for While and Return.
	* rowl1/rowl1-assemble.rlc : bugfix of put_store_arg().

2011-10-01  nineties <nineties48@gmail.com>

	* Changelog : added.
	* rowl1/rowl1-numeric.rlc : check division by zero.
	* rowl1/rowl1-compile.rlc :
	    - compilers for following expressions are added.
		Block,If,Else
	    - implemented short-cut optimization for conditional expression.
	    - changed to use concrete patterns for Compile().
	* rowl1/vm-insn.rlc : erase if_true and if_false instructions
	    changed representation of true/false from 1/0 to symbols 'true' and 'false'.