@@ -2,7 +2,7 @@
 ; rowl - 1st generation
 ; Copyright (C) 2010 nineties
 ;
-; $Id: rowl1-io.rlc 2011-10-05 04:26:28 nineties $
+; $Id: rowl1-io.rlc 2011-10-05 14:07:50 nineties $
 ;
 
 (import "rlvm-compile")
@@ -21,7 +21,7 @@
     (return (make_ifstream path (open_in path)))
     ))
 
-(fun close_in (st) (
+(fun io_close_in (st) (
     (close_in (field_get st 2))
     ))
 
@@ -33,7 +33,7 @@
     (return (make_ofstream path (open_out path)))
     ))
 
-(fun close_out (st) (
+(fun io_close_out (st) (
     (close_out (field_get st 2))
     ))
 
@@ -102,8 +102,8 @@
     ; file IO
     (add_builtin_function1 tbl (to_sym "open_in") (headP String) io_open_in)
     (add_builtin_function1 tbl (to_sym "open_out") (headP String) io_open_out)
-    (add_builtin_function1 tbl (to_sym "close") (headP InputFileStream) close_in)
-    (add_builtin_function1 tbl (to_sym "close") (headP OutputFileStream) close_out)
+    (add_builtin_function1 tbl (to_sym "close") (headP InputFileStream) io_close_in)
+    (add_builtin_function1 tbl (to_sym "close") (headP OutputFileStream) io_close_out)
     (add_builtin_function2 tbl (to_sym "print") (headP OutputFileStream) DontCare io_print)
     (add_builtin_function2 tbl (to_sym "print") (headP OutputFileStream) (headP String) io_print_str)
     (add_builtin_function2 tbl (to_sym "print") (headP OutputFileStream) (headP Int) io_print_int)
